@@ -1,3 +1,9 @@
+Mon May 28 02:50:50 2001  George Lebl <jirka@5z.com>
+
+	* xstuff.[ch], basep-widget.c, foobar-widget.c:  Set the USSize and
+	  USPosition hints, as well as the Min/Max size hints to disallow
+	  resizing.
+
 Sun May 27 18:30:42 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, session.[ch], menu.c, gnome-panel-properties.c,
